code/ui/Hud.razor.scss
Hud {
    .header {
        position: relative;
        top: 50px;
        flex-direction: column;
        z-index: 0;
        margin: 0 auto;

        label {
            font-family: Roboto;
            color: white;
            font-size: 20px;

            &.subtitle {
                font-size: 10px;
            }
        }
    }

    .info {
        position: absolute;
        display: flex;
        flex-direction: row;
        bottom: 5%;
        left: 2%;

        label {
            font-family: Roboto;
            font-size: 17px;
        }
    }

    .scoreboard {
        background-color: rgba(128, 128, 128, 0.3);
        height: 500px;
        left: 20px;
        top: 20px;
        position: absolute;
        display: flex;
        flex-direction: row;

        label {
            font-family: Roboto;
            font-size: 18px;
        }
    }
}

